# company-os

./: Company OS System Design.docx  README.md  TODO.md  agent_runner.py  hierarchy.py  implementation-plan.md  main.py  plan_manager.py  pyproject.toml  state.py  system-design.md
